# gbrunner

./: .gitignore  README.md  environment.yml  pyproject.toml
eval/: net_eval.py  test.py
gbr/: __init__.py  cli.py  data.py
sbatch/: arb100k_x.yml  gbr20k_gpu_dense_config.yml  stgbr100k_cpu_dense_config.yml  stlgb100k_cpu_dense_config.yml  stlgb100k_x_cpu_dense_config.yml  stlgb100k_y_cpu_dense_config.yml  stxgb100k_cpu_dense_config.yml  stxgb100k_gpu_dense_config.yml  stxgb200k_gpu_dense_config.yml  stxgb20k_gpu_dense_config.yml  stxgb500k_gpu_dense_config.yml  stxgb_gpu_dense_config.yml  xgb100k_cpu_dense_config.yml  xgb20k_5k_cpu_dense_config.yml  xgb20k_8k_cpu_dense_config.yml  xgb20k_cpu_dense_config.yml
