#
# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "gbrunner"
version = "0.1"
description = "GB Runner : "
authors = ["Sriram P Chockalingam <srirampc@gatech.edu>"]
readme = "README.md"
homepage = "https://github.com/srirampc/gbrunner"
license = "Apache-2.0"
keywords = ["Data-driven", "Computational Biology", "Gene Regulatory Networks"]

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.1"
pandas = "^2.2"
polars = "^1.24"
scipy = "^1.15"
scikit-learn = "^1.5"
tqdm = "^4.66"
#
anndata = "^0.11"
arboreto = "^0.1"
lightgbm = "^4.6"
scanpy = "^1.11"
xgboost = "^3.0"

[tool.setuptools.packages.find]
include = ["gbrunner"]

[tool.pyright]
include = ["gbr", "eval", "data"]
exclude = ["**/__pycache__"]

[tool.black]
line-length = 88
target-version = ["py310"]
